--- a/templates/contact.html
+++ b/templates/contact.html
@@ -43,7 +43,8 @@
        
        <li><a href="{% url 'index' %}">Main</a></li>
 	   <li class="active"><a href="{% url 'contact' %}">Contacts</a></li>
-       <li><a href="{% url 'student_list' %}">Students</a></li>	
+       <!-- <li><a href="{% url 'student_list' %}">Students</a></li>-->	
+       <li><a href="{% url 'students:students'%}">Students</a></li>
       </ul>
      
         </li>
