--- a/templates/index.html
+++ b/templates/index.html
@@ -49,7 +49,8 @@
         <li><a href="student_list.html">Students</a></li>-->
         <li class="active"><a href="{% url 'index' %}">Main</a></li>
         <li><a href="{% url 'contact' %}">Contacts</a></li>
-        <li><a href="{% url 'student_list' %}">Students</a></li> 
+        <!--<li><a href="{% url 'student_list' %}">Students</a></li>--> 
+        <li><a href="{% url 'students:students'%}">Students</a></li>
       
       </ul>
      
@@ -68,14 +69,22 @@
 </div>
 </div>
 
-<div class="center" class="page-header" >
+<!--<div class="center" class="page-header" >
   <h1  >Program</h1>
 
 	<div class="alert alert-success" role="alert">PYTHON</div>
 	<div class="alert alert-info" role="alert">GIT</div>
 	<div class="alert alert-warning" role="alert">HTML</div>
 	<div class="alert alert-danger" role="alert">CSS</div>
-</div>
+</div>-->
+<table class="jewel" border="1" cellpadding="10">
+<tr>
+ <th>Курс</th><th>Описание</th>
+{% for i in name_course %}
+<tr><td><a href="{% url 'courses:courses' i.id %}">{{i}}</a></td><td>{{i.description}} </td></tr>
+{% endfor %}
+</tr>
+</table>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
