--- a/students/templates/students/detail.html
+++ b/students/templates/students/detail.html
@@ -43,7 +43,7 @@
        
         <li><a href="{% url 'index' %}">Main</a></li>
         <li><a href="{% url 'contact' %}">Contacts</a></li>
-        <li class="active"><a href="{% url 'student_list' %}">Students</a></li>
+        <li class="active"><a href="{% url 'students:students'%}">Students</a></li>
       </ul>
       </li>
       </ul>
