KZ 5_1 try task 4_1 1

--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -24,7 +24,7 @@
       </div>
     </nav>
     <div class="col-md-10 col-md-push-1">
-      <h2 class="sub-header">План Курса</h2>
+      <h2>План Курса</h2>
       <div class="table-responsive">
         <table class="table" border=2>
           <thead>
