--- a/templates/coaches/detail.html
+++ b/templates/coaches/detail.html
@@ -26,7 +26,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="{% url 'index' %}">Main</a><li>
+            <li class="active"><a href="{% url 'index' %}">Main</a><li>
             <li><a href="{% url 'contact' %}">Contacts</a><li>
             <li><a href="{% url 'students:list_view' %}">Students</a><li>
           </ul>
@@ -67,7 +67,7 @@
                       <td>
                         {% for crs in course %}
                             <a href="{% url 'courses:detail' crs.id %}">{{ crs.name }}</a> Course students
-                            <a class="top_bar" href="{% url 'students:list_view' %}?course_id={{ crs.id }}">
+                            <a href="{% url 'students:list_view' %}?course_id={{ crs.id }}">
                             <span class="glyphicon glyphicon-education" aria-hidden="true"></span></a><br>
                         {% endfor %}
                       </td>
@@ -77,7 +77,7 @@
                       <td>
                         {% for assist in assistant %}
                             <a href="{% url 'courses:detail' assist.id %}">{{ assist.name }}</a> Course students 
-                            <a class="top_bar" href="{% url 'students:list_view' %}?course_id={{ assist.id }}">
+                            <a href="{% url 'students:list_view' %}?course_id={{ assist.id }}">
                             <span class="glyphicon glyphicon-education" aria-hidden="true"></span></a><br>
                         {% endfor %}
                       </td>  
