--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -26,7 +26,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="{% url 'index' %}">Main</a><li>
+            <li class="active"><a href="{% url 'index' %}">Main</a><li>
             <li><a href="{% url 'contact' %}">Contacts</a><li>
             <li><a href="{% url 'students:list_view' %}?course_id={{ course.id }}">Students</a><li>
           </ul>
@@ -44,7 +44,7 @@
                 <h3>Coach</h3>
                  <table class="table">
                     <thead>
-                      <tr><th><br><a href="{% url 'coaches:detail' coach.id %}">{{ coach.user.get_full_name }}</a></br></th></tr>
+                      <tr><th><br><a href="{% url 'coaches:detail' coach.id %}">{{ coach.user.first_name }} {{ coach.user.last_name }}</a></br></th></tr>
                     </thead>
                     <tbody>   
                           <tr><td>{{ coach.description }}</td></tr>
@@ -53,7 +53,7 @@
                 <h3>Assistant</h3>
                  <table class="table">
                     <thead>
-                      <tr><th><a href="{% url 'coaches:detail' course.assistant.id %}">{{ course.assistant.user.get_full_name }}</a></th></tr>
+                      <tr><th><a href="{% url 'coaches:detail' course.assistant.id %}">{{ course.assistant.user.first_name }} {{ course.assistant.user.last_name }}</a></th></tr>
                     </thead>
                     <tbody>   
                           <tr><td>{{ course.assistant.description }}</td></tr>
