--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -24,6 +24,8 @@
       </div>
     </nav>
     <div class="col-md-10 col-md-push-1">
+      <h1>{{course}}</h1>
+      <h2>{{course.description}}</h2>
       <h2>План Курса</h2>
       <div class="table-responsive">
         <table class="table" border=2>
