--- a/templates/coaches/detail.html
+++ b/templates/coaches/detail.html
@@ -22,11 +22,11 @@
     <ul class="nav nav-tabs">
       <li role="presentation"><a href="{% url 'index' %}">Main</a></li>
       <li role="presentation"><a href="{% url 'contact' %}">Contacts</a></li>
-      <li role="presentation" class = "active"><a href="{% url 'students:list_view'  %}">Students</a></li>
+      <li role="presentation"><a href="{% url 'students:list_view'  %}">Students</a></li>
     </ul>
 
 
-    <h2>{{ coach.name }} {{ coach.surname }}</h2>
+    <h2>{{ coach.surname }} {{ coach.name }} </h2>
     <br>
     <table class="table table-bordered">
       <tbody>
@@ -59,13 +59,7 @@
             <td>
               <ul>
                 {% for course in coach_courses %}
-                <li>
-                  <a href="{% url 'courses:detail' coach.id %}">{{ course.name }}
-                  </a>
-                   студенты курса
-                  <a href="{% url 'students:list_view' %}?course_id={{ course.id }}"><span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span>
-                  </a>
-                </li>
+                <li><a href="{% url 'courses:detail' course.id %}">{{ course.name }}</a> студенты курса<a href="{% url 'students:list_view' %}?course_id={{ course.id }}"><span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span></a></li>
                 {% endfor %} 
               </ul>    
             </td>
@@ -76,14 +70,7 @@
             <td>
               <ul>
                 {% for course in assistant_courses %}
-                <li>
-                  <a href="{% url 'courses:detail' coach.id %}">
-                    {{ course.name }}
-                  </a> 
-                  студенты курса
-                  <a href="{% url 'students:list_view' %}?course_id={{ course.id }}"><span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span>
-                  </a>
-                </li>
+                <li><a href="{% url 'courses:detail' course.id %}">{{ course.name }}</a> студенты курса<a href="{% url 'students:list_view' %}?course_id={{ course.id }}"><span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span></a></li>
                 {% endfor %} 
               </ul>    
             </td>
