--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
         <ul class="nav nav-pills">
             <li role="presentation"  class="active"><a href="{% url 'index' %}">Main</a></li>
             <li role="presentation"><a href="{% url 'contact' %}">Contacts</a></li>
-            <li role="presentation"><a href="{% url 'student_list' %}">Students</a></li>
+            <li role="presentation"><a href="{% url 'students' %}">Students</a></li>
         </ul>
     </div>
     <div class="jumbotron">
