--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -44,16 +44,16 @@
                 <h3>Coach</h3>
                  <table class="table">
                     <thead>
-                      <tr><th><br><a href="{% url 'coaches:detail' coach.id %}">{{ coach.user.first_name }} {{ coach.user.last_name }}</a></br></th></tr>
+                      <tr><th><br><a href="{% url 'coaches:detail' course.coach.id %}">{{ course.coach.first_name }} {{ course.coach.last_name }}</a></br></th></tr>
                     </thead>
                     <tbody>   
-                          <tr><td>{{ coach.description }}</td></tr>
+                          <tr><td>{{ course.coach.description }}</td></tr>
                     </tbody>
                   </table>
                 <h3>Assistant</h3>
                  <table class="table">
                     <thead>
-                      <tr><th><a href="{% url 'coaches:detail' course.assistant.id %}">{{ course.assistant.user.first_name }} {{ course.assistant.user.last_name }}</a></th></tr>
+                      <tr><th><a href="{% url 'coaches:detail' course.assistant.id %}">{{ course.assistant.first_name }} {{ course.assistant.last_name }}</a></th></tr>
                     </thead>
                     <tbody>   
                           <tr><td>{{ course.assistant.description }}</td></tr>
@@ -70,14 +70,12 @@
                   </tr>
                 </thead>
                 <tbody>   
-					          {% for lesson in lessons%}
+					          {% for lesson in course.lesson_set.all%}
                       <tr>
                         <td>{{ lesson.order }}</td>
                         <td>{{ lesson.subject }}</td>
                         <td>{{ lesson.description }}</td>
                       </tr>
-                    {% empty %}
-                        <h3>No courses</h3>
                     {% endfor %}
                 </tbody>
               </table>
