--- a/templates/contact.html
+++ b/templates/contact.html
@@ -23,7 +23,7 @@
               <ul class="nav navbar-nav">
                 <li><a href="{% url 'index' %}">Main</a></li>
                 <li class="active"><a href="{% url 'contact' %}">Contacts<span class="sr-only">(current)</span></a></li>
-                <li><a href="{% url 'student_list' %}">Students</a></li>
+                <li><a href="{% url 'students:list_view' %}">Students</a></li>
               </ul>
             </div>
           </div>
