--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -23,7 +23,7 @@
               <ul class="nav navbar-nav">
                 <li><a href="{% url 'index' %}">Main</a></li>
                 <li><a href="{% url 'contact' %}">Contacts</a></li>
-                <li class="active"><a href="{% url 'student_list' %}">Students<span class="sr-only">(current)</span></a></li>
+                <li class="active"><a href="{% url 'students:list_view' %}">Students<span class="sr-only">(current)</span></a></li>
                 </li>
               </ul>
             </div>
