--- a/students/templates/students/list_view.html
+++ b/students/templates/students/list_view.html
@@ -39,7 +39,7 @@
       <ul class="nav navbar-nav">
         <li><a href="{% url 'index' %}">Main</a></li>
         <li><a href="{% url 'contact' %}">Contacts</a></li>
-        <li><a href="{% url 'students:students'%}">Students</a></li>
+        <li><a href="{% url 'students:students' %}">Students</a></li>
       
       </ul>
      
@@ -50,7 +50,7 @@
 	</nav>
 	<nav>
   	<ul class=" color pager">
-    <li><a href="{% url 'student_list' %}">Previous</a></li>
+    <li><a href="{% url 'students:students' %}">Previous</a></li>
   	
     </ul>
 </nav>
