--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -40,7 +40,7 @@
         <li><a href="{% url 'index' %}">Main</a></li>
         <li><a href="{% url 'contact' %}">Contacts</a></li>
         <!--<li><a href="% url 'student_list' %}">Students</a></li>-->
-        <li><a href="{% url 'students:students'%}">Students</a></li>
+        <li><a href="{% url 'students:students' %}">Students</a></li>
       
       </ul>
      
@@ -51,7 +51,8 @@
 	</nav>
 	<nav>
   	<ul class=" color pager">
-    <li><a href="{% url 'student_list' %}">Previous</a></li>
+    <!--<li><a href="{% url 'student_list' %}">Previous</a></li>-->
+    <li><a href="{% url 'students:students' %}">Previous</a></li>
   	
     </ul>
 </nav>
