--- a/courses/templates/courses/detail.html
+++ b/courses/templates/courses/detail.html
@@ -43,7 +43,7 @@
        
         <li><a href="{% url 'index' %}">Main</a></li>
         <li><a href="{% url 'contact' %}">Contacts</a></li>
-     	<li><a href="{% url 'students:students'%}{{id_c}}">Students</a></li>
+     	<li><a href="{% url 'students:students' %}{{id_c}}">Students</a></li>
        
       </ul>
        
@@ -54,36 +54,17 @@
 <div class="center bold page-header">
   <h1>Язык программирования для души</h1>
 </div>
-<style>
-.demotable {
-  /*border-collapse: collapse;*/
-  counter-reset: schetchik;  /* счётчик с названием "schetchik" работает в рамках класса .demotable */ 
-}
-.demotable tr {
-  counter-increment: schetchik;  /* при встрече тега tr счётчик с названием "schetchik" увеличивается на единицу */ 
-}
-.demotable td,
-.demotable tr:before {
-  padding: .1em .5em;
-  border: 1px solid #E7D5C0;
-}
-.demotable tr:before {
-  content: counter(schetchik);  /* значение счётчика с названием "schetchik" записывается в первую клетку строки */ 
-  display: table-cell;
-  vertical-align: middle;
-  color: #978777;
-}
-</style>
+
 
 <!-- Table class="table align-justify"-->
-  <table  class="demotable jewel" border="1" cellpadding="10" >
+  <table  class="jewel" border="1" cellpadding="10" >
 <tr>
  <th>№</th><th>Тема</th><th>Описание</th>
 </tr> 
 
 {% for i in name_lesson %}
 <tr>
-<td> </td><td>{{i}}</a></td><td>{{i.description}} </td>
+<td>{{forloop.counter}}</td><td>{{i}}</a></td><td>{{i.description}}</td>
 </tr>
 
 {% endfor %}
