--- a/templates/index.html
+++ b/templates/index.html
@@ -21,11 +21,17 @@
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container-fluid">
         <div class="navbar-header">
-          <button type="button"  data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <button type="button" class="navbar-toggle collapsed"  data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
           </button>
-          <a href="{% url 'index' %}">Главная</a>
-          <a href="{% url 'contact' %}">Контакты</a>
-          <a href="{% url 'students:list_view' %}">Студенты</a>
+          <ul>
+            <li id="button"><a href="{% url 'index' %}">Главная</a></li>
+            <li id="button"><a href="{% url 'contact' %}">Контакты</a></li>
+            <li id="button"><a href="{% url 'students:list_view' %}">Студенты</a></li>
+          </ul>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         </div>
