--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -22,22 +22,25 @@
       <div class="container-fluid">
         <div class="navbar-header">
           <button type="button"  data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+             <span class="icon-bar"></span>
+             <span class="icon-bar"></span>
+             <span class="icon-bar"></span>
           </button>
-          <a href="{% url 'index' %}">Главная</a>
-          <a href="{% url 'contact' %}">Контакты</a>
-          <a href="{% url 'students:list_view' %}">Студенты</a>
-      
+            <li id="button"><a href="{% url 'index' %}">Главная</a></li>
+            <li id="button"><a href="{% url 'contact' %}">Контакты</a></li>
+            <li id="button"><a href="{% url 'students:list_view' %}">Студенты</a></li>
     	    </div>
     	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
     	  </div>
       </div>
     </nav>
-  	<div class="page-header">
+    <div class="page-header">
       <h1 class="student-head">Студенты ITBursa</h1>
       	<p class="below-header">Список студентов учащихся в ooniversity</p>
   	</div>
-		<div class="study_table">
-		  <div class="panel panel-default">
+	  <div class="study_table2">
+       <div class="panel panel-default">
   	    <div class="panel-heading"><h2 class="course_program" >Курс 2015</h2></div>
 		      <table class="table table-hover">
   		      <tr class="headtable_student"><td><h3>No</h3></td><td><h3>Фамилия Имя</h3></td><td><h3>Адрес</h3></td><td><h3>Skype</h3></  td><td><h3>Курсы</h3></td><tr>            
