--- a/courses/templates/courses/detail.html
+++ b/courses/templates/courses/detail.html
@@ -40,63 +40,29 @@
             <!--<span class="sr-only">(current)</span>-->
             </a></li>
             <li><a href="{% url 'contact' %}">Contacts</a></li>
-            <li><a href="{% url 'students:students' %}">Students</a></li>
+            <li><a href="{% url 'students:students' %}{{course}}">Students</a></li>
           </ul>
         </div>
       </div>
     </nav>
 
-    <div class="page-header text-align-center">
-      <div class="container">
-        <div class="jumbotron transparant-background font-small-caps">
-          <h2 class = "text-align-center">PyBursa - professional course of Python</h2>
-          <h3 class="desription-color">Description</h3>
-          <div class = "lead">
-            <p class = "text-align-justify f-indent">This course aims to teach everyone the basics of programming computers using Python.
-              We cover the basics of how one constructs a program from a series of simple instructions in Python.
-              The course has no pre-requisites and avoids all but the simplest mathematics.
-              Anyone with moderate computer experience should be able to master the materials in this course.
-              This course will cover Chapters 1-5 of the textbook "Python for Informatics".
-              This course is equivalent to the first half of the 11-week "Programming for Everybody (Python)" course.
-              Once a student completes this course, they will be ready to take more advanced programming courses.</p>
-          </div>
-        </div>
-      </div>
       <div class="container">
         <div class="jumbotron transparant-background">
-          <h2>Program</h2>
+          <h2>{{course_name}}</h2>
+          <p>{{course_description}}</p>
           <div class="panel panel-default transparant-background">
             <table class="table table-striped text-align-justify">
-              <tr>
-                <td>1</td>
-                <td>Chapter One - Why we Program?</td>
-                <td>Welcome <br> Lecture materials <br>  Additional Materials</td>
-              </tr>
-              <tr>
-                <td>2</td>
-                <td>Installing and Using Python</td>
-                  <td>Installing Python - Overview <br> Recommended: Install Python - Windows 8 <br>  Recommended: Using Python - Macintosh<br> Recommended: Using Python on a Raspberry Pi <br> Recommended: Install Python - Windows Vista <br> Optional: Python Installation </td>
-              </tr>
-            </table>
-          </div>
-        </div>
-      </div>
-    </div>
-
-      <div class="container">
-        <div class="jumbotron transparant-background">
-          <h2>Courses</h2>
-          <div class="panel panel-default transparant-background">
-            <table class="table text-align-justify">
-              <tr>
-              <td>Course</td>
+            <tr>
+              <td>#</td>
+              <td>Lesson</td>
               <td>Description</td>
               </tr>
-              {% for course in courses_all %}
-                <tr>
-                <td><a href="{% url 'courses:courses' course.id %}">{{course}}</a></td><td>{{course.short_description}}</td>
-                </tr>
-              {% endfor %}
+            {% for lesson in course_lessons %}
+              <tr>
+              <td>{{forloop.counter}}</td>
+              <td>{{lesson}}</td><td>{{lesson.description}}</td>
+              </tr>
+            {% endfor %}
             </table>
           </div>
         </div>
