--- a/templates/contact.html
+++ b/templates/contact.html
@@ -40,7 +40,7 @@
             <!--<span class="sr-only">(current)</span>-->
             </a></li>
             <li class="active"><a href="{% url 'contact' %}">Contacts</a></li>
-            <li><a href="{% url 'student_list' %}">Students</a></li>
+            <li><a href="{% url 'students:students' %}">Students</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
