--- a/students/templates/students/detail.html
+++ b/students/templates/students/detail.html
@@ -40,7 +40,7 @@
             <!--<span class="sr-only">(current)</span>-->
             </a></li>
             <li><a href="{% url 'contact' %}">Contacts</a></li>
-            <li class="active"><a href="{% url 'students:students' %}">Students</a></li>
+            <li><a href="{% url 'students:students' %}">Students</a></li>
           </ul>
         </div>
       </div>
