--- a/templates/contact.html
+++ b/templates/contact.html
@@ -39,7 +39,7 @@
             <li><a href="/">Main
             <!--<span class="sr-only">(current)</span>-->
             </a></li>
-            <li class="active"><a href="{% url 'contact' %}">Contacts</a></li>
+            <li><a href="{% url 'contact' %}">Contacts</a></li>
             <li><a href="{% url 'students:students' %}">Students</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
