--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
         <!-- Collect the nav links, forms, and other content for toggling  -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav font-bold">
-            <li class="active"><a href="/">Main
+            <li><a href="/">Main
             <!--<span class="sr-only">(current)</span>-->
             </a></li>
             <li><a href="{% url 'contact' %}">Contacts</a></li>
