--- a/courses/templates/courses/detail.html
+++ b/courses/templates/courses/detail.html
@@ -36,9 +36,7 @@
         <!-- Collect the nav links, forms, and other content for toggling  -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav font-bold">
-            <li><a href="/">Main
-            <!--<span class="sr-only">(current)</span>-->
-            </a></li>
+            <li><a href="/">Main</a></li>
             <li><a href="{% url 'contact' %}">Contacts</a></li>
             <li><a href="{% url 'students:students' %}{{course}}">Students</a></li>
           </ul>
