--- a/templates/students/detail.html
+++ b/templates/students/detail.html
@@ -36,26 +36,38 @@
     </nav>
 
     <div class="container" id='id1'>
-      <h1>BEST IT</h1>
-      <p class=simple>Добро пожаловать на страницу нашей ИТ школы. Мы научим вас программировать с нуля. Обучаясь онлайн у профессионалов, вы быстро достигнете результатов. Наши выпускники сейчас работают в большинстве крупных ИТ компаний города.</p>
-      <h3 class=h3>Мы предлагаем обучение по таким направлениям</h3>
+      <h1>{{student.name}} {{student.surname}}</h1>
     </div>
 
     <div class="container" id='id1'>
-					<table class="table table-striped">
-						<thead>
-								<tr>
-									<th>Курс</th>
-									<th>Описание</th>
-								</tr>
-						</thead>
+					<table class="table table-bordered">
 						<tbody>
-              {% for course in all_courses %}
               <tr>
-                <td><a href="{% url 'courses:detail' course.id%}">{{course.name}}</a></td>
-                <td>{{course.short_description}}</td>
+                <td>дата рождения</td>
+                <td>{{student.date_of_birth}}</td>
               </tr>
-              {% endfor %}
+              <tr>
+                <td>email</td>
+                <td>{{student.email}}</td>
+              </tr>
+              <tr>
+                <td>телефон</td>
+                <td>{{student.phone}}</td>
+              </tr>
+              <tr>
+                <td>адрес</td>
+                <td>{{student.address}}</td>
+              </tr>
+              <tr>
+                <td>skype</td>
+                <td>{{student.skype}}</td>
+              </tr>
+              <tr>
+                <td>курсы</td>
+                <td>{% for c in student.courses.all%}
+                      <a href="{% url 'courses:detail' c.id%}">{{c.name}}</a><br>
+                    {% endfor %}</td>
+              </tr>
 						</tbody>
 					</table>
       </div>
