--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>IT Courses - Main</title>
+    <title>Список студентов</title>
     {% load staticfiles %}
     <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
@@ -35,25 +35,28 @@
       </div><!-- /.container-fluid -->
     </nav>
 
-    <div class="container" id='id1'>
-      <h1>BEST IT</h1>
-      <p class=simple>Добро пожаловать на страницу нашей ИТ школы. Мы научим вас программировать с нуля. Обучаясь онлайн у профессионалов, вы быстро достигнете результатов. Наши выпускники сейчас работают в большинстве крупных ИТ компаний города.</p>
-      <h3 class=h3>Мы предлагаем обучение по таким направлениям</h3>
-    </div>
-
-    <div class="container" id='id1'>
-					<table class="table table-striped">
-						<thead>
-								<tr>
-									<th>Курс</th>
-									<th>Описание</th>
-								</tr>
+    <div class="container" id='id4'>
+      <h1>Список студентов курса</h1>
+				<table class="table table-bordered">
+					<thead>
+							<tr>
+								<th>#</th>
+								<th>фамилия и имя</th>
+								<th>адрес</th>
+								<th>skype</th>
+								<th>курсы</th>
+			  				</tr>
 						</thead>
 						<tbody>
-              {% for course in all_courses %}
+              {% for stud in st_list %}
               <tr>
-                <td><a href="{% url 'courses:detail' course.id%}">{{course.name}}</a></td>
-                <td>{{course.short_description}}</td>
+                <td>{{stud.id}}</td>
+                <td><a href="{% url 'students:detail' stud.id%}">{{stud.name}} {{stud.surname}}</a></td>
+                <td>{{stud.address}}</td>
+                <td>{{stud.skype}}</td>
+                <td>{% for c in stud.courses.all%}
+                      <li><a href="{% url 'courses:detail' c.id%}">{{c.name}}</a></li>
+                    {% endfor %}</td>
               </tr>
               {% endfor %}
 						</tbody>
