--- a/students/templates/students/detail.html
+++ b/students/templates/students/detail.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Main</title>
+    <title>{{student.name}} {{student.surname}}</title>
 	{% load staticfiles %}
 
     <link href="{%static 'css/bootstrap.css'%}" rel="stylesheet">
@@ -37,9 +37,9 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href={% url 'index'%}>Main</a></li>
+        <li><a href={% url 'index'%}>Main</a></li>
         <li><a href="{% url 'contact'%}">Contacts</a></li>
-		<li><a href="{% url 'students:list_view'%}">Students</a></li>
+		<li><a href={% url 'students:list_view'%}>Students</a></li>
         <li class="dropdown">
           <a href={% url 'index'%} class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
@@ -81,28 +81,36 @@
 
  
 
-  <h2 class = "style-thead3">Description  of ItBursa courses</h2>
-  <p class = "style-thead2">Some description of ItBursa courses</p>
-  <p><a class="btn btn-primary btn-lg" href="http://itbursa.com/about_us" role="button">Learn more</a></p>
-</div>
- <h2 class = "style-thead3">Description  of ItBursa courses</h2>
+  <h2 class = "style-thead3">{{student.name}} {{student.surname}}</h2>
+
   <table class="table ">
-			<thead>
-				<tr class = "style-thead">
-				
-					<th>Course</th>
-					<th>Description</th>
-				
-				</tr>
-			</thead>
 			<tbody>
-			{% for course in courses %}
 				<tr class = "style-thead3">
-					<td><a href="/courses/{{course.id}}/">{{course.name}}</a></td>
-					<td>{{course.short_description}}</td>
-					
+					<td>Birth Date</td>
+					<td>{{student.date_of_birth}}</td>
 				</tr>
-			{% endfor %}
+				<tr class = "style-thead3">
+					<td>Address</td>
+					<td>{{student.address}}</td>
+				</tr>
+				<tr class = "style-thead3">
+					<td>Email</td>
+					<td>{{student.email}}</td>
+				</tr>
+				<tr class = "style-thead3">
+					<td>Skype</td>
+					<td>{{student.skype}}</td>
+				</tr>
+				<tr class = "style-thead3">
+					<td>Courses</td>
+					<td>
+					{% for course in courses %}
+						<a href = {% url 'courses:detail' course.id %}>{{course.name}}, </a>
+					{% endfor %}
+					</td>
+				</tr>
+			
+			
 			</tbody>
 		</table>
 
