--- a/templates/contact.html
+++ b/templates/contact.html
@@ -41,7 +41,7 @@
       <ul class="nav navbar-nav">
         <li><a href="{% url 'index'%}">Main</a></li>
         <li class="active"><a href="{% url 'contact'%}">Contacts</a></li>
-		<li><a href="{% url 'student_list'%}">Students</a></li>
+		<li><a href="{% url 'students:list_view'%}">Students</a></li>
         <li class="dropdown">
           <a href="{% url 'contact'%}" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
