--- a/courses/templates/courses/detail.html
+++ b/courses/templates/courses/detail.html
@@ -38,7 +38,7 @@
           <ul class="nav navbar-nav font-bold">
             <li><a href="/">Main</a></li>
             <li><a href="{% url 'contact' %}">Contacts</a></li>
-            <li><a href="{% url 'students:students' %}{{course}}">Students</a></li>
+            <li><a href="{% url 'students:list_view' %}{{course}}">Students</a></li>
           </ul>
         </div>
       </div>
