--- a/students/templates/students/list.html
+++ b/students/templates/students/list.html
@@ -38,7 +38,7 @@
           <ul class="nav navbar-nav font-bold">
             <li><a href="/">Main</a></li>
             <li><a href="{% url 'contact' %}">Contacts</a></li>
-            <li><a href="{% url 'students:students' %}">Students</a></li>
+            <li><a href="{% url 'students:list_view' %}">Students</a></li>
           </ul>
         </div>
       </div>
@@ -60,21 +60,21 @@
               {% for student in course_students %}
                 <tr>
                   <td>{{forloop.counter}}</td>
-                  <td><a href="{% url 'students:students' student.id %}">{{student.surname}} {{student.name}}</a></td>
+                  <td><a href="{% url 'students:detail' student.id %}">{{student.surname}} {{student.name}}</a></td>
                   <td>{{student.address}}</td>
                   <td>{{student.skype}}</td>
                   {% for course in student.courses.all %}
 
 
                       {% ifequal forloop.counter 1 %}
-                        <td>{{course}}</td>
+                      <td><a href="{% url 'courses:detail' course.id %}">{{course}}</a></td>
                       {% else %}
                         <tr>
                         <td></td>
                         <td></td>
                         <td></td>
                         <td></td>
-                        <td>{{course}}</td>
+                        <td><a href="{% url 'courses:detail' course.id %}">{{course}}</a></td>
                         </tr>
                       {% endifequal %}
                   {% endfor %}
