--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@
           <ul class="nav navbar-nav font-bold">
             <li><a href="/">Main</a></li>
             <li><a href="{% url 'contact' %}">Contacts</a></li>
-            <li><a href="{% url 'students:students' %}">Students</a></li>
+            <li><a href="{% url 'students:list_view' %}">Students</a></li>
           </ul>
         </div>
       </div>
@@ -92,7 +92,7 @@
               </tr>
               {% for course in courses_all %}
                 <tr>
-                <td><a href="{% url 'courses:courses' course.id %}">{{course}}</a></td><td>{{course.short_description}}</td>
+                <td><a href="{% url 'courses:detail' course.id %}">{{course}}</a></td><td>{{course.short_description}}</td>
                 </tr>
               {% endfor %}
             </table>
