--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -13,73 +13,33 @@
         <ul class="nav nav-pills">
             <li role="presentation"><a href="{% url 'index' %}">Main</a></li>
             <li role="presentation"><a href="{% url 'contact' %}">Contacts</a></li>
-            <li role="presentation"><a href="{% url 'student_list' %}">Students</a></li>
+            <li role="presentation"><a href="{% url 'students' %}">Students</a></li>
         </ul>
     </div>
-    <h1>Persianova Elena</h1>
-    <p> Информация о студенте</p>
-    <div class="jumbotron">
-        <h1>Info</h1>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Student's blog</a></p>
+     <div class="jumbotron">
+        <h2 class="center">{{ student.name }} {{ student.surname }}</h2>
     </div>
-    <div class="page-header">
-        <h1 class="alert alert-success center">Подробная информация</h1>
-        <div class="alert alert-info center" role="alert">о студенте</div>
-    </div>
-    <table class="table table-bordered">
-        <tr> <td>Surname</td> <td>Persianova</td> </tr>
-        <tr> <td>Name</td> <td>Olena</td> </tr>
-        <tr> <td>Patronymic</td> <td>Yriivna</td> </tr>
-        <tr> <td>Rating</td> <td>20</td> </tr>
-        <tr> <td>Average Grade</td> <td>99</td> </tr>
-        <tr> <td>Package</td> <td>Standart</td> </tr>
-        <tr> <td>Birth Date</td> <td>10-05-1989</td> </tr>
-        <tr> <td>Address</td> <td>Ukraine</td> </tr>
-        <tr> <td>Post</td> <td>61085</td> </tr>
-        <tr> <td>Skype</td> <td>Persianova</td> </tr>
-        <tr> <td>E-mail</td> <td>Persianova@test.com</td> </tr>
-    </table>
-    <p>Perfomance</p>
-    <table class="table table-bordered">
+    <table class="table">
         <tr>
-            <th>Course</th>
-            <th>Week</th>
-            <th>Control type</th>
-            <th>Grade</th>
+            <th>Дата рождения</th>
+            <th>Адрес</th>
+            <th>Почта</th>
+            <th>Логин Skype</th>
+            <th>Телефон</th>
+            <th>Курсы</th>
         </tr>
         <tr>
-            <td rowspan="5">Introduction in Python</td>
-            <td rowspan="3">Week 1 </td>
-            <td>Tests</td>
-            <td>99%</td>
-        </tr>
-        <tr>
-            <td>Problem task №1</td>
-            <td>100% </td>
-        </tr>
-        <tr>
-            <td>Problem Task №2</td>
-            <td>90% </td>
-        </tr>
-        <tr>
-            <td rowspan="2">Week 2</td>
-            <td>Tests</td>
-            <td>95% </td>
-        </tr>
-        <tr>
-            <td>Problem task 1</td>
-            <td>95% </td>
+            <td>{{ student.date_of_birth }}</td>
+            <td>{{ student.address }}</td>
+            <td>{{ student.email }}</td>
+            <td>{{ student.skype }}</td>
+            <td>{{ student.phone }}</td>
+            <td>
+            {% for course in student.courses.all %}
+                <a href="courses/{{ course.id }}">{{ course.name }}</a>
+            {% endfor %}
+            </td>
         </tr>
     </table>
-    <div class="well well-sm center">Good luck</div>
-        <span class="label label-info">to you</span>
-        <div class="panel panel-default">
-        <div class="panel-heading">
-            <h3 class="panel-title">Panel title</h3>
-        </div>
-        <div class="panel-body">
-            Panel content
-        </div>
-    </div>
 </body>
 </html>
