--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -52,7 +52,7 @@
 	<nav>
   	<ul class=" color pager">
     <!--<li><a href="{% url 'student_list' %}">Previous</a></li>-->
-    <li><a href="{% url 'students:students' %}">Previous</a></li>
+    <li><a href="{% url 'students:list' %}">Previous</a></li>
   	
     </ul>
 </nav>
