--- a/courses/templates/courses/detail.html
+++ b/courses/templates/courses/detail.html
@@ -43,7 +43,7 @@
        
         <li><a href="{% url 'index' %}">Main</a></li>
         <li><a href="{% url 'contact' %}">Contacts</a></li>
-     	<li><a href="{% url 'students:students' %}{{id_c}}">Students</a></li>
+     	<li><a href="{% url 'students:list' %}{{id_c}}">Students</a></li>
        
       </ul>
        
