--- a/students/templates/students/list.html
+++ b/students/templates/students/list.html
@@ -6,9 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Student's card</title>
+    <title>Student of Bursa</title>
 
     <!-- Bootstrap -->
+    <!--<link href="../static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../static/css/style.css" rel="stylesheet">-->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
 
@@ -20,79 +22,67 @@
     <![endif]-->
   </head>
   <body class="area">
-  	<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <!--<a class="navbar-brand" href="#">PyBursa</a>-->
-      <!--<div class="nav navbar-nav">Bursa
-			</div>-->
+   
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+      <!-- <a class="navbar-brand" href="#">PyBursa</a>-->
+    <!-- <div class="navbar-brand" >Bursa
+</div>-->
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
+       
         <li><a href="{% url 'index' %}">Main</a></li>
         <li><a href="{% url 'contact' %}">Contacts</a></li>
-        <li><a href="{% url 'students:students' %}">Students</a></li>
-      
+        <li><a href="{% url 'students:list' %}">Students</a></li>
       </ul>
-     
-        </li>
+      </li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
-	</nav>
-	<nav>
-  	<ul class=" color pager">
-    <li><a href="{% url 'students:students' %}">Previous</a></li>
-  	
-    </ul>
 </nav>
-<div class="center">
-<h1>{{name_student}} {{name_student.surname}}</h1> </div>
-<!-- Table class="table align-justify "-->
-<table class="table-color" border="1" cellpadding="10">
+
+<div class="center bold page-header">
+  <h1>Students of course PyBursa</h1>
+</div>
+
+<!-- Table class="table align-justify"-->
+  <table  class="jewel" >
+<tr>
+ <th>#</th><th>Фамилия имя</th><th>Адрес</th><th>Skype</th><th>Курсы</th>
+ </tr> 
+{% for i in name_stud %}
+<tr >
+<td>1</td>
+<td><a href="{% url 'students:detail' i.id %}">{{i}} {{i.surname}}</a></td>
+<td>{{i.address}}</td><td>{{i.skype}}</td>
+
+{% for course in i.courses.all %}
+<tr >
+<td>{{i.orderr}}</td>
+<td></td>
+<td></td><td></td>
+<td><a href="{% url 'courses:detail' course.id %}">{{course}}</a></td>
+ </tr>
+{% endfor %}
 
 
-<tr > 
-<td class="bold">дата рождения</a></td>
-<td>{{name_student.date_of_birth|date:"N d,Y"}}</td>
-</tr>
-<tr > 
-<td class="bold">адрес</a></td>
-<td>{{name_student.address}}</td>
-</tr>
-<tr > 
-<td class="bold">почта</a></td>
-<td>{{name_student.email}}</td>
-</tr>
-<tr > 
-<td class="bold">логин Skype</a></td>
-<td>{{name_student.skype}}</td>
-</tr>
-<tr > 
-<td class="bold">телефон</a></td>
-<td>{{name_student.phone}}</td>
-</tr>
-{% for course in name_student.courses.all %}
-<tr > 
-<td class="bold">курсы</a></td>
-
-<td>{{course}}</td>
-
-</tr>
+ </tr>
 {% endfor %}
   </table>    
-
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-   <script src="{% static 'js/bootstrap.min.js' %}"></script>
-  </body>
+    <!--<script src="../static/js/bootstrap.min.js"></script>-->
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+	</body>
 </html>
