--- a/templates/contact.html
+++ b/templates/contact.html
@@ -44,7 +44,7 @@
        <li><a href="{% url 'index' %}">Main</a></li>
 	   <li class="active"><a href="{% url 'contact' %}">Contacts</a></li>
        <!-- <li><a href="{% url 'student_list' %}">Students</a></li>-->	
-       <li><a href="{% url 'students:students' %}">Students</a></li>
+       <li><a href="{% url 'students:list' %}">Students</a></li>
       </ul>
      
         </li>
