Changed apps Courses, Students 9

--- a/students/templates/students/detail.html
+++ b/students/templates/students/detail.html
@@ -48,7 +48,7 @@
       <div class="container">
         <div class="jumbotron transparant-background-table">
           <h2>{{student.name}} {{student.surname}}</h2>
-          <table class="table text-align-justify">
+          <table>
             <tr>
               <td>Birth Date</td>
               <td>{{student.date_of_birth|date:"N d, Y"}}</td>
