--- a/courses/templates/courses/detail.html
+++ b/courses/templates/courses/detail.html
@@ -38,8 +38,8 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><a href={% url 'index'%}>Main</a></li>
-        <li><a href="{% url 'contact'%}">Contacts</a></li>
-		<li><a href="/students/?course_id={{course.id}}">Students</a></li>
+        <li><a href={% url 'contact'%}>Contacts</a></li>
+		<li><a href={% url 'students:list_view'%}?course_id={{course.id}}>Students</a></li>
         <li class="dropdown">
           <a href={% url 'index'%} class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
